VFS-5020 fixed collapse animation css

--- a/app/styles/onedata-gui-common/components/one-collapsible-list-item-content.scss
+++ b/app/styles/onedata-gui-common/components/one-collapsible-list-item-content.scss
@@ -7,7 +7,7 @@
   border-bottom: 0;
   background-color: $main-content-hover-background;
   &.opened {
-    overflow-y: visible;
+    overflow-y: hidden;
     max-height: 2500px;
     opacity: 1;
     border-bottom: 1px solid $main-border-color;
